--- a/cadastro.html
+++ b/cadastro.html
@@ -31,6 +31,18 @@
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
 
+                    <div class="input-container ">
+                        <input name="telefone" id="telefone" class=" input" type="text" placeholder="telefone" data-tipo="telefone" required>
+                        <label class="input-label" for="telefone">telefone</label>
+                        <span class="input-mensagem-erro">Este campo não está válido</span>
+                    </div>
+
+                    <div class="input-container ">
+                        <input name="instagram" id="instagram" class=" input" type="text" placeholder="instagram" data-tipo="instagram" required>
+                        <label class="input-label" for="instagram">instagram</label>
+                        <span class="input-mensagem-erro">Este campo não está válido</span>
+                    </div>
+
 
 
 
@@ -81,6 +93,7 @@
                         <label class="input-label" for="estado">Estado</label>
                         <span class="input-mensagem-erro">Este campo não está válido</span>
                     </div>
+                    
                 </fieldset>
                 <button class="botao">Cadastrar</button>
             </form>
